src/main/java/com/example/demo/core/error/exeption/DuplicateException.java
package com.example.demo.core.error.exeption;


import com.example.demo.core.error.ErrorCode;

public class DuplicateException extends BusinessException {

    public DuplicateException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}
